tech-k8s/mongodb/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: default
  labels:
    app: mongodb
spec:
  replicas:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: docker-ops-hosted.digikala.com/k8s/tools/mongo
          ports:
            - containerPort: 27017
