tech-k8s/mongodb/mongo-express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: default
  labels:
    app: mongo-express
spec:
  replicas:
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: docker-ops-hosted.digikala.com/k8s/tools/mongo-express
          ports:
            - containerPort: 8081
