tech-k8s/mongodb/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: default
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
